🚫 Removed webpack + install parcel

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "private": true,
   "scripts": {
     "start:api": "node ./api/index.js",
-    "start": "http-server -p 8082 ./dist",
-    "build:prod": "export NODE_ENV='production' && npm run build && npm run build:tw",
-    "build": "webpack",
-    "build:tw": "tailwind build ./src/css/tw-main.css -o ./dist/main.css",
+    "start": "parcel src/index.html --port 8081 --hmr-port 8082",
+    "build:prod": "export NODE_ENV='production' && npm run build",
+    "build": "parcel build src/index.html",
+    "build:tw": "tailwind build ./src/css/tw-main.css -o ./src/css/main.css",
     "build:ts": "tsc"
   },
   "author": "",
@@ -16,14 +16,15 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "tailwindcss": "^1.7.6",
     "ytdl-core": "^3.2.2"
   },
   "devDependencies": {
     "http-server": "^0.12.3",
+    "parcel-bundler": "^1.12.4",
     "postcss-loader": "^3.0.0",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "typescript": "^4.0.2"
   }
 }
