--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:api": "node ./api/index.js",
     "start": "parcel src/index.html --port 8081 --hmr-port 8082",
     "build:prod": "export NODE_ENV='production' && npm run build",
-    "build": "parcel build src/index.html",
+    "build": "rm -rf /dist && parcel build src/index.html",
     "build:tw": "tailwind build ./src/css/tw-main.css -o ./src/css/main.css",
     "build:ts": "tsc"
   },
@@ -20,6 +20,9 @@
     "ytdl-core": "^3.2.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "http-server": "^0.12.3",
     "parcel-bundler": "^1.12.4",
     "postcss-loader": "^3.0.0",
